--- a/css/app.scss
+++ b/css/app.scss
@@ -7,8 +7,8 @@ $primary:green;
 .header{
     background-color: rgba(255, 255, 255, 0.817);
     backdrop-filter: blur(20px) contrast(130%);
-    z-index: 999;
-    transition: all 0.5s ease;
+    // z-index: 999;
+    transition: all 0.5s ease-in;
 }
 .header-icon{
     width: 40px;
@@ -18,4 +18,10 @@ $primary:green;
     width: 65px;
     height: 65px;
     fill: $primary;
+}
+.scroll-to-top-btn{
+    position: fixed;
+    bottom: 30px;
+    right: 30px; 
+    transition: all 0.5s ease-in;
 }
